@@ -39,6 +39,21 @@
             <version>5.5.13.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>9.0.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kordamp.ikonli</groupId>
+            <artifactId>ikonli-javafx</artifactId>
+            <version>12.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kordamp.ikonli</groupId>
+            <artifactId>ikonli-fontawesome5-pack</artifactId>
+            <version>12.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -61,7 +76,18 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>it.unipv.po.aioobe.trenissimo/it.unipv.po.aioobe.trenissimo.view.TrenissimoGUI</mainClass>
+                            <!-- INSERIRE QUI LA PATH AL JDK -->
+                            <executable>C:\Users\Tyrell Wellick\.jdks\openjdk-17.0.2\bin\java</executable>
+                            <options>
+                                <option>--add-exports javafx.graphics/com.sun.javafx.scene=com.jfoenix</option>
+                                <option>--add-exports javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
+                                <option>--add-exports javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
+                                <option>--add-exports javafx.base/com.sun.javafx.binding=com.jfoenix</option>
+                                <option>--add-exports javafx.base/com.sun.javafx.event=com.jfoenix</option>
+                                <option>--add-exports javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
+                                <option>--add-opens=java.base/java.lang.reflect=com.jfoenix</option>
+                            </options>
+                            <mainClass>it.unipv.po.aioobe.trenissimo/it.unipv.po.aioobe.trenissimo.view.Splashscreen</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
